--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,13 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.context-type=text/html
 
-#热部署文件，页面不产生缓存，及时更新 目前没启作用
+#热部署文件，页面不产生缓存，及时更新 warn:idea还需修改自身设置方能生效 见印象笔记
 spring.thymeleaf.cache=false
-spring.resources.chain.strategy.content.enabled=true
-spring.resources.chain.strategy.content.paths=/**
+
+#mysql数据库配置
+spring.db.url=jdbc:mysql://localhost:3306/test
+spring.db.driverClassName=com.mysql.jdbc.Driver
+spring.db.url.username=root
+spring.db.url.password=root
+#自定义sql时，mapper.xml存放的位置
+#mybatis.mapper-locations=classpath:mapper/*.xml
