--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.thymeleaf.context-type=text/html
 spring.thymeleaf.cache=false
 
 #mysql数据库配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasoure.username=root
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useSSL=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
 spring.datasource.password=root
 #自定义sql时，mapper.xml存放的位置
 #mybatis.mapper-locations=classpath:mapper/*.xml
